--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,8 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets/favicon-32x32.ico",
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -90,6 +92,8 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
+              "src/assets/favicon-32x32.ico",
+              "src/assets/",
               {
                 "glob": "**/*",
                 "input": "public"
